# Criticality-Conditioned-Failure-Prediction

./: .gitignore  LICENSE  README.md  REPRODUCE.md  _build_modeling_nb.py  _build_synthetic_notebook.py  bom_graph.py  check_olist_dataset.py  check_usaid_dataset.py  collect_paper_results.py  data_tests.py  generate_synthetic_datasets.py  modeling.ipynb  modeling_lib.py  pyproject.toml  run_olist_layer2.py  synthetic_data_generator.ipynb  visualize_bom_graph.py
scripts/: check_abc_share_benchmark.py  check_bom_benchmark.py  check_recall_benchmark.py  hyperparameter_search.py  multi_seed_significance.py  panel_significance_test.py  reproduce_paper.py  run_modeling_core.py  tune_conditioning.py
