[project]
name = "part-class-variability"
version = "0.1.0"
description = "Research workspace: criticality-aware inventory / hybrid synthetic data generation"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.1",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbconvert>=7.14",
    "nbformat>=5.10",
]

[tool.uv]
package = false
